...
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toTopOf="@+id/habit_event_title"
        app:layout_constraintEnd_toStartOf="@+id/habit_event_title"
        app:tint="@color/Lighter_Gray_Text" />

    <ImageButton
        android:id="@+id/deleteHabitEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/Medium_Gray_Background"
        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintBottom_toTopOf="@+id/habit_event_title"
...
