...
        app:layout_constraintEnd_toStartOf="@+id/textView22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393"></TextView>

    <ListView
        android:id="@+id/habit_event_list"
        android:layout_width="375dp"
        android:layout_height="301dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="10.0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
