...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Dark_Gray_Background"
    android:orientation="vertical">

    <EditText
        android:id="@+id/habit_title"
        android:layout_width="149dp"
        android:layout_height="43dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/rounded_corners_user_input"
        android:gravity="center"
        android:hint="Habit Title"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:tint="@color/Lighter_Gray_Text" />

    <ImageButton
        android:id="@+id/confirm"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="323dp"
        android:layout_marginBottom="158dp"
        android:backgroundTint="#00FFFFFF"
        android:src="@drawable/ic_done"
...
